flickering fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,7 +77,7 @@ h1 {
   font-family: valorant;
   color: #fff;
   animation: load-h1 1s ease-in-out 0s 1 forwards,
-    flickering 2s linear 0s infinite alternate;
+    flickering 3s linear 0s infinite alternate;
 }
 
 div {
@@ -98,7 +98,7 @@ div {
 
 strong {
   text-shadow: 0 0 0px #fff, 0 0 15px #fff;
-  animation: flickering 3s linear 4s infinite alternate;
+  animation: flickering 3s linear 3s infinite alternate;
 }
 
 #dc-button {
